# wyclef-rs

./: .gitignore  Cargo.toml  README.md  build-script.sh  test.jlog
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs  tui.rs
src/models/: clef.rs
