[package]
name = "wyclef-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
colored = "2.0.4"
crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
regex = "1.9.5"
serde_json = { version = "1.0.107", features = [] }
